# SimConnector

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua  vcpkg.json
client/: CMakeLists.txt  premake5.lua
client/include/: cpch.h
client/include/client/: Connection.h
client/src/: Connection.cpp  cpch.cpp  main.cpp
cmake/: SPARKCompilerFlags.cmake  SPARKTarget.cmake
core/: CMakeLists.txt  premake5.lua
core/include/: cpch.h
core/include/core/: Uuid.h  UuidGenerator.h
core/include/core/events/: Signal.h  Slot.h
core/include/core/interfaces/: IConnection.h  IRequest.h  IResponse.h
core/include/core/mpl/: callback.h  factory.h
core/include/core/request/: ReadRequest.h  RemoveRequest.h  RequestFactory.h  WriteRequest.h
core/include/core/response/: ReadResponse.h  ResponseFactory.h  WriteResponse.h
core/include/core/ser/: serialize.h
core/include/core/simconnect/: Runner.h  SimVar.h
core/src/: Uuid.cpp  UuidGenerator.cpp
core/src/request/: ReadRequest.cpp  RequestFactory.cpp  WriteRequest.cpp
core/src/response/: ReadResponse.cpp  ResponseFactory.cpp  WriteResponse.cpp
core/src/simconnect/: Runner.cpp
scripts/: setup.bat  setup.py  setup_premake.py  utils.py  win_gen.bat
server/: CMakeLists.txt  premake5.lua
server/include/: SimConnectLoader.h  spch.h
server/include/server/: NetworkConnection.h
server/src/: SimConnectLoader.cpp  main.cpp  spch.cpp
server/src/server/: NetworkConnection.cpp  Runner.cpp
